re-add theme changes

--- a/alves/style.css
+++ b/alves/style.css
@@ -4777,3 +4777,4 @@ body:not(.fse-enabled) #masthead {
 .fse-template-part .wp-block-cover-image .has-background {
 	text-shadow: none;
 }
+/*test*/
